--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -1,6 +1,10 @@
 .main-banner {
     margin-bottom: 120px;
-    padding: 0 22px;
+    padding: 0 24px;
+
+    @media (max-width: $maxTabletWidth) {
+        margin-bottom: 80px;
+    }
 
     @media (max-width: $maxMobWidth) {
         padding: 0;
@@ -17,8 +21,15 @@
         background: linear-gradient(270deg, #FFF1F4 0%, #F9F9F9 100%);
         border-radius: 4px;
 
-        @media (max-width: $maxMobWidth) {
+        @media (max-width: $maxTabletWidth) {
             flex-direction: column;
+            gap: 35px;
+            padding: 40px;
+            padding-top: 47px;
+        }
+
+        @media (max-width: $maxMobWidth) {
+
             align-items: center;
             padding: 32px 8px;
             padding-bottom: 253px;
@@ -27,6 +38,12 @@
 
     &__wrapper {
         margin-right: 103px;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            // max-width: 377px;
+            padding-right: 255px;
+            margin: 0;
+        }
 
         @media (max-width: $maxMobWidth) {
             margin: 0;
@@ -68,6 +85,15 @@
         display: flex;
         flex-direction: column;
         max-width: 328px;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            display: grid;
+            grid-template-columns: 296px 296px;
+            column-gap: 22px;
+            row-gap: 16px;
+            justify-content: center;
+            max-width: none;
+        }
     }
 
     &__tel-input {
@@ -87,6 +113,12 @@
             outline: none;
             border: 1px solid #888888;
             color: #000000;
+        }
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            width: 100%;
+            margin: 0;
+            padding: 13px 80px;
         }
 
         @media (max-width: $maxMobWidth) {
@@ -122,6 +154,10 @@
             background: #F08597;
             box-shadow: 0px 0px 50px #FFBCC7;
         }
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            margin: 0;
+        }
     }
 
     &__checkbox {
@@ -138,6 +174,10 @@
         &-wrapper {
             display: flex;
             align-items: center;
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                grid-column: 2 / -1;
+            }
         }
 
         &__text {
@@ -178,6 +218,11 @@
         width: 300px;
         height: 251px;
         background: url('../assets/img/phone.svg') no-repeat;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            top: -69px;
+            right: 0;
+        }
 
         @media (max-width: $maxMobWidth) {
             top: auto;
