--- a/src/assets/sass/components/stock.scss
+++ b/src/assets/sass/components/stock.scss
@@ -2,17 +2,24 @@
     max-width: 1410px;
     margin: 0 auto;
     margin-bottom: 120px;
-    padding: 0 22px;
+    padding: 0 24px;
+
+    @media (max-width: $maxTabletWidth) {
+        margin-bottom: 80px;
+    }
 
     @media (max-width: $maxMobWidth) {
         padding: 0;
-        margin-bottom: 80px;
     }
 
     &__list {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         gap: 78px 32px;
+
+        @media (max-width: $maxTabletWidth) {
+            grid-template-columns: 1fr 1fr;
+        }
 
         @media (max-width: $maxMobWidth) {
             display: flex;
@@ -58,6 +65,10 @@
             justify-content: flex-end;
             grid-row: 1 / 3;
 
+            @media (max-width: $maxTabletWidth) {
+                grid-column: 1 / -1;
+                grid-row: 1;
+            }
             @media (max-width: $maxMobWidth) {
                 display: none;
             }
@@ -84,6 +95,12 @@
             padding: 38px 50px 44px 35px;
             background-color: #FFF1F4;
             border-radius: 4px;
+
+            @media (max-width: $maxTabletWidth) {
+                width: 100%;
+                height: 348px;
+                margin-left: 42px;
+            }
         }
     }
 
@@ -161,5 +178,10 @@
         background: #E9E9E9 url('../assets/img/product-rose.svg') no-repeat bottom right;
         background-size: 304px 332px;
         border-radius: 4px;
+
+        @media (max-width: $maxTabletWidth) {
+            bottom: 120px;
+            height: 372px;
+        }
     }
 }
