--- a/src/assets/sass/components/textblock.scss
+++ b/src/assets/sass/components/textblock.scss
@@ -3,18 +3,21 @@
     grid-template-columns: 1fr 1fr;
     gap: 32px;
     max-width: 1452px;
-    padding: 0 22px;
+    padding: 0 24px;
     margin: 0 auto;
     margin-bottom: 100px;
     font-weight: 300;
     line-height: 17px;
 
-    @media (max-width: $maxMobWidth) {
+    @media (max-width: $maxTabletWidth) {
         display: flex;
         flex-direction: column;
         gap: 24px;
-        padding: 0;
         margin-bottom: 80px;
+    }
+
+    @media (max-width: $maxMobWidth) {
+        padding: 0;
         font-size: 12px;
         line-height: 15px;
     }
