--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -22,6 +22,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 gap: 32px;
+                column-gap: 30px;
                 justify-content: center;
             }
 
